<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_menu_search" />
        <item
            android:id="@+id/nav_acquisitions"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_menu_new_acquisitions" />
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_menu_policies" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_menu_bookmarks" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="@string/nav_menu_recent" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_menu_settings" />
    </group>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="License" />
        </menu>
    </item>

</menu>
